# CivDiplomatic

./: CMakeLists.txt  README.md  main.cpp
src/: main.cpp
test/: settings.txt  test.csv
